--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+# Основные библиотеки для скачивания видео
 yt-dlp==2024.3.10
 tqdm==4.66.2
 aiohttp==3.9.3
-asyncio==3.4.3 
+asyncio==3.4.3
+
+# Безопасность и сертификаты
+certifi==2023.11.17
+
+# Дополнительные утилиты (опционально)
+colorama==0.4.6  # Для красивого вывода в терминале Windows 
